# redis_cache

./: .gitignore  Makefile  README.md  README_REDIS_HASH.md  cookies.txt  cookies_jane.txt  main.py  pyproject.toml  requirements.txt  setup_redis.py  test_imports.py  test_redis_hash.py
app/: __main__.py  auth_models.py  auth_routes.py  config.py  models.py  question_analytics.py  routers.py  services.py  session.py  user_profiles.py
app/api/: __init__.py
app/api/analytics/: __init__.py  routes.py
app/api/auth/: routes.py
app/api/users/: __init__.py  routes.py
app/core/: config.py  session.py
app/models/: auth.py
app/services/caching/: redis_client.py
app/utils/: helpers.py
semantic_cahing/: semantic_caching_ai_course.py  semantic_cahing.py
tests/: __init__.py
tests/unit/: test_utils.py
